--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	 crossorigin="anonymous">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src='script.js'></script>
+	<script src='Jspell.js'></script>
 </head>
 <body class="d-flex flex-column justify-content-center">
 	<h1 class="mx-auto" style="width: 400px">Solr Search Engine</h1>
