--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Solr Search Engine</title>
+	<link rel="shortcut icon" href="">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
 	 crossorigin="anonymous">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src='script.js'></script>
 	<script src='Jspell.js'></script>
+	<script src='Jspell2.js'></script>
+	<script src='script.js'></script>
 </head>
 <body class="d-flex flex-column justify-content-center">
 	<h1 class="mx-auto" style="width: 400px">Solr Search Engine</h1>
