--- a/index1.html
+++ b/index1.html
@@ -6,28 +6,30 @@
 	<link rel="shortcut icon" href="">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
 	 crossorigin="anonymous">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src='Jspell.js'></script>
-	<script src='Jspell2.js'></script>
-	<script src='script.js'></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="jquery.auto-complete.css">
 </head>
 <body class="d-flex flex-column justify-content-center">
 	<h1 class="mx-auto" style="width: 400px">Solr Search Engine</h1>
 	<form>
 		<div class="form-group">
 			<label for="query">Query box</label>
-			<input type="text" class="form-control" id="query" placeholder="Enter search text">
+			<input type="text" class="form-control" id="query" placeholder="Enter search text" data-autocomplete="/suggest?word=">
+			<input type="hidden" id="hidden-field">
 		</div>
 			<label for="select">Sorted By</label>
 			<select class="form-control col-3" id="select">
 				<option selected value="score">Lucene</option>
 				<option value="pageRankFile">PageRank</option>
 			</select>
-		
 	</form>
 	<button type="button" id="search" class="mx-auto btn btn-primary">Submit</button>
 </body>
 <table id='result' hidden>
-
 </table>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+ crossorigin="anonymous"></script>
+<script src="jquery.auto-complete.js"></script>
+<script src='script.js'></script>
 </html>
