--- a/index1.html
+++ b/index1.html
@@ -24,8 +24,8 @@
 	</form>
 	<button type="button" id="search" class="mx-auto btn btn-primary">Submit</button>
 </body>
-<table id='result' hidden>
-</table>
+<div id='result' hidden>
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
  crossorigin="anonymous"></script>
